--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -35,7 +35,10 @@
             android:id= "@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button" />
+            android:text="@string/next_button"
+            android:layout_gravity="bottom|right"
+            android:drawableEnd="@drawable/arrow_right"
+            android:drawablePadding="4dp"/>
 
 
 
